--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 django
+psycopg2
 whitenoise
 libsass
-django-compressor
-django-sass-processor
+django-appconf
 django-cas-client
-django-post_office
-"django-constance[database]"
+django-compressor
 django-constance
-django-ical
 django-extensions
+django-ical
+django-picklefield
+django-post-office
+django-sass-processor
