--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,25 @@
-django
-psycopg2-binary
-whitenoise
-libsass
-django-appconf
-django-cas-client
-django-compressor
-django-constance
-django-extensions
-django-ical
-django-picklefield
-django-post-office
-django-sass-processor
-django-phonenumber-field
-phonenumbers
+Babel==2.6.0
+Django==2.2
+django-appconf==1.0.3
+django-cas-client==1.5.0
+django-compressor==2.2
+django-constance==2.4.0
+django-extensions==2.1.6
+django-ical==1.5
+django-loginas==0.3.6
+django-phonenumber-field==2.3.1
+django-picklefield==2.0
+django-post-office==3.1.0
+django-sass-processor==0.7.3
+icalendar==4.0.3
+jsonfield==2.0.2
+libsass==0.18.0
+phonenumbers==8.10.9
+psycopg2-binary==2.8.2
+python-dateutil==2.8.0
+pytz==2019.1
+rcssmin==1.0.6
+rjsmin==1.0.12
+six==1.12.0
+sqlparse==0.3.0
+whitenoise==4.1.2
