--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ pywebpush==1.6.0
 rcssmin==1.0.6
 requests==2.21.0
 rjsmin==1.0.12
+sentry-sdk==0.10.0
 six==1.12.0
 sqlparse==0.3.0
 urllib3==1.24.2
